--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,3 @@
-#main{
-    margin-top: 30px;
-}
-.container-main{
-    max-width: 1200px;
-    margin: 0 auto;
-    align-content: right;
-}
-.container{
-    align-items: right;
-
+body{
+    background-image: url(image/mine1.jpg);
 }
